##Text encoding: utf-8

2010-08-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gchemutils.cc: make things compile again with current goffice.
	* goffice/gogcrystalapp.cc: more work on crystal support.
	* goffice/gogcrystalwin.cc: ditto.
	* libs/gcp/application.cc: more setlocale eradication work.
	* libs/gcp/document.cc: ditto.
	* libs/gcp/view.cc: ditto.
	* libs/gcr/window.h: more work on crystal support in component.

2010-08-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: more setlocale eradication work.
	* libs/gcp/theme.cc: ditto.
	* libs/gcu/macros.h: new conversionmacros between char* ans xmlChar*.
	* libs/gcu/xml-utils.cc: new ReadInt() and WriteInt convenience functions.
	* libs/gcu/xml-utils.h: ditto.

2010-08-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gogcrystalapp.cc: do not use setlocale when loading a gcrystal
	file.
	* libs/gcr/document.cc: ditto.
	* libs/gcu/xml-utils.cc: ditto.
	* libs/gcu/xml-utils.h: ditto.
	* programs/crystal/document.cc: ditto.

2010-08-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gogcpapp.cc: fixed a memory leak.
	* goffice/gogcrystalapp.cc: import the document.
	* libs/gcp/fontsel.cc: remove slanted fonts when requested.
	* libs/gcp/fragment.cc: fix loading.

2010-08-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gchemutils.cc: make the crystal component use a window.
	* libs/gcp/fontsel.cc: add a new "label" property.
	* libs/gcp/fontsel.h: ditto.
	* plugins/paint/selection/bracketstool.cc: set the current font in the
	properties page.
	* plugins/paint/selection/bracketstool.h: ditto.

2010-08-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post branching version bump (0.13.1). 
	* libs/gcp/fontsel.cc: add a new property: "allow-slanted".
	* libs/gcp/fontsel.h: ditto and fixed a type macro.
	* libs/gcp/preferences.cc: use fixed a type macro.
	* plugins/paint/selection/bracketstool.cc: add an font selector not